--- a/build.xml
+++ b/build.xml
@@ -117,19 +117,16 @@
       classpath="resources:bin:${runtime.cp}">
       <arg value="${comp}"/>
 
-      <!-- Trace files for local Xen cluster -->
-<!--      <sysproperty key="tracefile" value="trace/007_KADAMS_SSR_SSENRL_LIST.tracesql"/>
-      <sysproperty key="traceFileDate" value="2014-01-15"/>-->
-
       <sysproperty key="ignore_stmts_file" value="conf/ignore_stmts.conf"/>
       <sysproperty key="defn_stmts_file" value="conf/defn_stmts.conf"/>
       <sysproperty key="cacheProgText" value="true"/>
 
-<!--      <sysproperty key="DbSID" value="XENCSDEV"/>
-      <sysproperty key="DbIP" value="10.0.0.88"/>-->
+      <sysproperty key="DbSID" value="XENCSDEV"/>
+      <sysproperty key="DbIP" value="10.0.0.88"/>
 
-      <sysproperty key="DbSID" value="ENTCSDEV"/>
-      <sysproperty key="DbIP" value="10.0.1.88"/>
+<!--      <sysproperty key="DbSID" value="ENTCSDEV"/>
+      <sysproperty key="DbIP" value="10.0.1.88"/>-->
+
       <sysproperty key="DbDriver" value="jdbc:oracle:thin"/>
 
       <!-- Required for use with Oracle JDBC driver. -->
