--- a/build.xml
+++ b/build.xml
@@ -51,6 +51,7 @@
         <include name="org/openpplsoft/antlr4/*.java"/>
         <include name="org/openpplsoft/buffers/*.java"/>
         <include name="org/openpplsoft/sql/*.java"/>
+        <include name="org/openpplsoft/trace/*.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
