--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
         <include name="org/openpplsoft/buffers/*.java"/>
         <include name="org/openpplsoft/sql/*.java"/>
         <include name="org/openpplsoft/trace/*.java"/>
+        <include name="org/openpplsoft/bytecode/Assembler.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
