AFlag.java and CommentAssembler.java now pass checkstyle audit.

--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,7 @@
         <include name="org/openpplsoft/buffers/*.java"/>
         <include name="org/openpplsoft/sql/*.java"/>
         <include name="org/openpplsoft/trace/*.java"/>
-        <include name="org/openpplsoft/bytecode/Assembler.java"/>
+        <include name="org/openpplsoft/bytecode/*.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
