Finishing implementation of GetHTMLText, includes separate definition for HTML objects.

--- a/conf/defn_stmts.conf
+++ b/conf/defn_stmts.conf
@@ -7,3 +7,4 @@ SELECT RECNAME, REFNAME, PACKAGEROOT, QUALIFYPATH, NAMENUM FROM PSPCMNAME WHERE 
 SELECT FIELDNAME, LABEL_ID, LONGNAME, SHORTNAME, DEFAULT_LABEL FROM PSDBFLDLABL WHERE FIELDNAME IN (SELECT A.FIELDNAME FROM PSDBFIELD A, PSRECFIELD B WHERE B.RECNAME = :1 AND A.FIELDNAME = B.FIELDNAME) ORDER BY FIELDNAME, LABEL_ID
 SELECT FIELDNUM, FIELDNAME, TO_CHAR(CAST((LASTUPDDTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF'), LASTUPDOPRID, RECNAME FROM PSRECFIELD WHERE RECNAME = :1 AND SUBRECORD = 'Y' ORDER BY RECNAME, FIELDNUM
 SELECT ALTCONTNUM, CONTFMT, VERSION, CONTSTYLE, DESCR, URL, COMPALG, AUXFLAGMASK, LASTUPDOPRID, TO_CHAR(CAST((LASTUPDDTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF') FROM PSCONTDEFN WHERE CONTNAME = :1 AND CONTTYPE = :2 ORDER BY ALTCONTNUM
+SELECT ALTCONTNUM, SEQNUM, CONTDATA FROM PSCONTENT WHERE CONTNAME = :1 AND CONTTYPE = :2 ORDER BY ALTCONTNUM, SEQNUM
