--- a/ivy.xml
+++ b/ivy.xml
@@ -15,8 +15,8 @@
     <dependency org="com.puppycrawl.tools" name="checkstyle" rev="5.7"
       conf="checkstyle->default"/>
 
-    <dependency org="org.springframework" name="spring-context"
-      rev="4.0.5.RELEASE" conf="runtime,compile->default"/>
+    <dependency org="org.springframework" name="spring-context" rev="4.0.5.RELEASE"
+      conf="runtime,compile->default"/>
     <dependency org="org.apache.logging.log4j" name="log4j-api" rev="2.0-rc1"
       conf="runtime,compile->default"/>
     <dependency org="org.apache.logging.log4j" name="log4j-core" rev="2.0-rc1"
@@ -24,6 +24,8 @@
     <dependency org="org.apache.commons" name="commons-lang3" rev="3.3.2"
       conf="compile->default"/>
     <dependency org="org.apache.commons" name="commons-dbcp2" rev="2.0.1"
+      conf="runtime,compile->default"/>
+    <dependency org="joda-time" name="joda-time" rev="2.4"
       conf="runtime,compile->default"/>
 
     <!-- Not available on public repos due to licensing constraints; will
