--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 <!--                         See LICENSE.md for details.                    -->
 <!--========================================================================-->
 
-<project name="OPS Runtime" default="build" basedir="."
+<project name="OPS Runtime" default="compile" basedir="."
     xmlns:ivy="antlib:org.apache.ivy.ant">
 
   <description>Build file for the OPS runtime project.</description>
